<resources>
    <string name="app_name">MyProfileMarkup</string>
    <string name="settings">Settings</string>
    <string name="nameSurname">Name Surname</string>
    <string name="career">Career</string>
    <string name="address">Address</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_contacts">VIEW MY CONTACTS</string>
    <string name="registration_header">Let\'s get acquainted</string>
    <string name="fill_out_profile">Fill out the profile and go to the application!</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="google">GOOGLE</string>
    <string name="register">REGISTER</string>
    <string name="about_terms_and_conditions">By clicking Register you agree to our Terms and Conditions</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
</resources>