<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_header"
        android:textColor="@color/profileWhite"
        android:textSize="26sp"
        android:fontFamily="@font/open_sans"
        android:layout_marginTop="150dp"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_out_profile"
        android:textColor="@color/grey_text"
        android:textSize="14sp"
        android:fontFamily="@font/open_sans"
        android:layout_margin="10dp"
        android:gravity="center"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:hintTextAppearance="@style/TextInputHint"
        android:textColorHint="@color/grey_text"
        android:layout_margin="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="anna.kikidzhan@gmail.com"
            android:textSize="20sp"
            android:textColor="@color/profileWhite" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:hintTextAppearance="@style/TextInputHint"
        android:textColorHint="@color/grey_text"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/profileWhite"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:checked="true"
        android:textColor="@color/grey_text"
        android:layout_marginStart="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_frame_button"
        android:text="@string/google"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="or"
        android:textColor="@color/profileWhite"
        android:fontFamily="@font/open_sans"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:gravity="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registration_button"
        android:background="@drawable/logo_circle"
        android:text="@string/register"
        android:textColor="@color/profileWhite"
        android:textSize="18sp"
        android:layout_marginHorizontal="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_terms_and_conditions"
        android:textColor="@color/profileWhite"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_margin="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textColor="@color/grey_text"
            android:textSize="16sp"
            android:layout_marginEnd="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/profileWhite"/>
    </LinearLayout>
</LinearLayout>