<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/blue">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/profileWhite"
            android:fontFamily="@font/open_sans"
            android:textSize="26sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_person_24"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameSurname"
            android:textColor="@color/profileWhite"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/career"
            android:textColor="@color/grey_text"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/grey_text"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp"
            android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/white"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="80dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:src="@mipmap/facebook_orange_logo"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:src="@mipmap/linkedin_orange_logo"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:src="@mipmap/instagram_orange_logo"/>
        </LinearLayout>
        <Button
            android:id="@+id/button_edit_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:gravity="center"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:background="@drawable/white_frame_button"
            android:fontFamily="@font/open_sans"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/view_contacts_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_shape_button"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/view_contacts"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>